# Trading-simulator

./: .gitignore  AWS CONFIG.md  DEVELOPMENT_PLAN.md  Features.md  MASTER ONBOARDING BLUEPRINT.md  Master Debugging & Quality Assurance Protocol..md  Master prompt boiler plate.md  PART 2 TECHNICAL ARCHITECTURE & DEVELOPMENT STACK.md  PART 3 UIUX DESIGN & WIREFRAME SPECIFICATIONS.md  PRODUCT_OVERVIEW.md  Safety Configuration Files.md  Simulator.md  amplify.yml  docker-compose.yml  frontend-design-skill.md
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_is_superuser.py
backend/app/api/: __init__.py  admin.py  auth.py  journal.py  payments.py  trading.py
backend/app/core/: __init__.py  config.py  database.py  middleware.py  security.py
backend/app/jobs/: leaderboard.py
backend/app/models/: __init__.py  journal.py  order.py  payment.py  portfolio.py  position.py  user.py
backend/jesse_custom/: __init__.py  config.py  constants.py  helpers.py  info.py  testing_utils.py  utils.py
backend/jesse_custom/controllers/: auth_controller.py  backtest_controller.py  candles_controller.py  config_controller.py  exchange_controller.py  file_controller.py  live_controller.py  lsp_controller.py  monte_carlo_controller.py  notification_controller.py  optimization_controller.py  strategy_controller.py  system_controller.py  websocket_controller.py
backend/jesse_custom/engine/: __init__.py  portfolio_manager.py  user_portfolio.py  user_position.py
backend/jesse_custom/enums/: __init__.py
backend/jesse_custom/exchange/: __init__.py  paper_exchange.py
backend/jesse_custom/exchanges/: exchange.py
backend/jesse_custom/factories/: __init__.py  order_factory.py
backend/jesse_custom/indicators/: __init__.py  acosc.py  ad.py  adx.py  alligator.py  alma.py  ao.py  apo.py  aroon.py  aroonosc.py  atr.py  avgprice.py  bandpass.py  beta.py  bollinger_bands.py  bollinger_bands_width.py  (+151 more)
backend/services/: __init__.py  market_stream.py
backend/tests/: conftest.py  test_order_execution.py  test_pnl_calculations.py
(+240 files in other folders)
